--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -47,12 +47,14 @@
                     <!-- Example row of columns -->
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="input-group">
-                            <input class="form-control input-lg" type="text" id="originalUrl">
-                            <span class="input-group-btn">
-                                <button class="btn btn-primary btn-lg" type="button" id="shorten">Shorten !</button>
-                            </span>
-                        </div>
+                        <form id="shortenurl">
+                            <div class="input-group">
+                                <input class="form-control input-lg" type="text" id="originalUrl">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-primary btn-lg" type="button" id="shorten">Shorten !</button>
+                                </span>
+                            </div>
+                        </form>
                     </div>
                 </div>
 
@@ -68,11 +70,13 @@
         <script>
             $( document ).ready(function() {
                 $("#shorten").click(function(){
-                    $.post("/shorten/",function( data ) {
-                        alert( "Data Loaded: " + data );
-                    });
-                })
-            }
+                    $.post("/shorten",{ originalUrl: $("#originalUrl").val()})
+                            .done(function( data ) {
+                                alert( "Data Loaded: " + data );
+                            });
+                });
+
+            });
         </script>
         </body>
     </html>
